Fix header wordmark
* was missing no-repeat
* some blurry scaling in Chrome, now simplified by shrinking the original SVG

--- a/themes/frontierline/sass/components/navigation/_nav-global.scss
+++ b/themes/frontierline/sass/components/navigation/_nav-global.scss
@@ -25,12 +25,12 @@
         margin: 8px 0 0;
 
         a {
-            @include background-size(93px 24px);
+            @include background-size(92px 24px);
             @include image-replaced;
-            background: url('img/mozilla-wordmark-white.svg');
+            background: transparent url('img/mozilla-wordmark-white.svg') no-repeat;
             display: inline-block;
             height: 24px;
-            width: 93px;
+            width: 92px;
         }
 
         @media #{$mq-tablet} {
